--- a/style1.css
+++ b/style1.css
@@ -146,10 +146,10 @@ body {
 
 /* ===== SECTION COLOR ===== */
 .section.fields h2 {
-    color: #1565C0;
+    color: #c40000;
 }
 .section.fields h2::after {
-    background-color: #1565C0;
+    background-color: #c40000;
 }
 
 .section.highlight h2 {
@@ -261,4 +261,5 @@ body {
         padding: 22px;
     }
 }
+
 
